[package]
name = "raudius-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
clickhouse = "0.11.3"
dotenv = "0.15"
envy = "0.4"
ethcontract = "0.23.2"
futures = "0.3"
mongodb = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
clickhouse = { version = "0.11.3", features = ["test-util"] }
