[package]
name = "raudius-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.6"
dotenv = "0.15"
envy = "0.4"
ethcontract = { version = "0.23", default-features = false }
futures = "0.3"
hash-ids = "0.2"
sea-orm = { version = "0.11", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "postgres-array" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
ethcontract-generate = "0.23"
